# AUFT

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json
Backend/: .env  API_USAGE_EXAMPLES.md  Procfile  QUICK_START.md  main.py  poll_match.py  pyproject.toml  requirements.txt  test_match_events.py
Backend/app/: app.py  auth.py  db.py  details.py  email_service.py  images.py  matches.py  players.py  points.py  results.py  scheduler.py  schemas.py  teams.py
mobile/: app.json  package-lock.json  package.json
mobile/app/(tabs)/: index.tsx
src/: App.tsx  index.css  main.tsx  react-app-env.d.ts  theme.css
src/@types/: Auth.tsx  Matches.tsx  PlayerStats.tsx  Players.tsx  Points.tsx  Results.tsx  Team.tsx  TeamStats.tsx  custom.d.ts
src/admin/: AdminLayout.tsx  Dashboard.tsx  dashboard.css  matchResultModal.css
src/admin/Auth/: Login.tsx
src/admin/components/: CreateMatchModal.tsx  CreateMatchResultModal.tsx  MatchResults.tsx  MatchResultsContainer.tsx  MatchSchedule.tsx  PointsTable.tsx  Teams.tsx  UpdateMatchModal.tsx  UpdatePointsModal.tsx  UpdateTeamModal.tsx  index.ts  teams.css
src/api/: adminauth.tsx  auth.tsx  axios.tsx  matchEvents.example.tsx  matches.tsx  playerStats.tsx  points.tsx  results.tsx  teamStats.tsx
src/components/: Pagination.jsx
src/components/FAQ/: FAQ.jsx  faq.css
src/components/Footer/: Footer.jsx  Footer.tsx
src/components/MatchResults/: MatchResults.tsx
src/layout/: AppHeader.tsx  AppLayout.tsx  AppSidebar.tsx
src/pages/: Blank.tsx  Calendar.tsx  UserProfiles.tsx  calendar.css
(+40 files in other folders)
