[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.127.0",
    "fastapi-users[supabase]>=15.0.3",
    "imagekitio>=5.0.0",
    "python-dotenv>=1.2.1",
    "supabase>=2.27.0",
    "uvicorn[standard]>=0.40.0",
]
